# W4GNS-Logger

./: .coverage  .gitignore  .pre-commit-config.yaml  .~lock.tribune_app(1).odt#  ADIF_SKCC_REFERENCE.txt  ALWAYS_RUNNING_CLOCK.md  ANALYSIS_INDEX.md  ANSWER_QSO_DATABASE_SPOT_CLASSIFICATION.md  ANSWER_TO_YOUR_QUESTION.md  AWARD_ACTIONS_UPDATE.md  AWARD_APPLICATIONS_FOLDER_UPDATE.md  AWARD_APPLICATION_FIX.md  AWARD_REPORTS_COMPLETION.txt  AWARD_REPORTS_ENHANCEMENT.md  AWARD_REPORTS_MASTER_GUIDE.md  AWARD_REPORTS_STATUS.txt  AWARD_SYSTEM_ARCHITECTURE.md  AWARD_SYSTEM_INDEX.md  CLAUDE.md  CODEBASE_ANALYSIS_SUMMARY.txt  CODE_IMPROVEMENTS.md  DELIVERABLES.txt  DEPENDENCY_OPTIMIZATION.md  DROPDOWN_RESIZING.md  EXCEPTION_HANDLING.md  FIELD_SIZING.md  GRACEFUL_SHUTDOWN_IMPLEMENTATION.md  GUI_DELIVERABLES.txt  GUI_IMPLEMENTATION_COMPLETE.md  GUI_IMPLEMENTATION_FINAL_REPORT.md  GUI_INTEGRATION_GUIDE.md  GUI_TESTING_CHECKLIST.md  HELP.md  HELP_SYSTEM.md  Ham_Radio_Logging_Program_Design_Document.txt  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  KEY_TYPE_QUICK_START.txt  LAUNCHER_UPDATE.md  LAUNCHING_GUI.md  (+65 more)
.claude/: claude.md
.github/workflows/: ci.yml
award_applications/: README.md  centurion_report_20251028_163845.txt  tribune_report_20251028_164026.txt  tribune_report_20251030_134431.txt
config/: awards.yaml  clusters.yaml  qrz.yaml
docs/: ADIF_EXPORT_GUIDE.md  AWARD_IMPLEMENTATION_PATTERN.md  AWARD_SYSTEM_INDEX.md  CANADIAN_MAPLE_AWARD.md  CENTURION_QUICK_IMPLEMENTATION.md  KEY_TYPE_FIELD.md  QRP_IMPLEMENTATION_GUIDE.md  QRP_POWER_TRACKING.md  README.md  SKCC_AWARDS_GUIDE.md  SKCC_CONTACT_WINDOW.md  SKCC_QUICK_REFERENCE.md
logs/: test_export.adif
rust_grid_calc/: Cargo.toml
rust_grid_calc/src/: adif.rs  awards.rs  lib.rs  spot_matcher.rs
src/: main.py
src/adif/: award_application_generator.py  award_report_generator.py  exporter.py  parser.py
src/awards/: base.py  canadian_maple.py  centurion.py  constants.py  dxcc.py  pfx.py  rag_chew.py  senator.py  skcc_dx.py  tribune.py  triple_key.py  wac.py  was.py
src/backup/: __init__.py  backup_manager.py
src/config/: settings.py
src/database/: base_repository.py  constants.py  contact_repository.py  models.py  repository.py  skcc_membership.py
src/integrations/: __init__.py  skcc_skimmer.py
src/qrz/: __init__.py  qrz_api.py  qrz_service.py
src/rbn/: __init__.py  rbn_fetcher.py
src/services/: centurion_fetcher.py  senator_fetcher.py  space_weather_fetcher.py  tribune_fetcher.py  voacap_muf_fetcher.py
src/skcc/: __init__.py  skcc_skimmer_rbn_fetcher.py  skcc_skimmer_subprocess.py  spot_adapter.py  spot_classifier.py  spot_fetcher.py  spot_manager.py  spot_source_adapter.py
src/ui/: canadian_maple_progress_widget.py  centurion_progress_widget.py  contact_edit_dialog.py  contacts_list_widget.py  dropdown_data.py  dx_award_progress_widget.py  field_manager.py  logging_form.py  main_window.py  pfx_progress_widget.py  power_stats_widget.py  previous_qsos_widget.py  qrp_mpw_progress_widget.py  qrp_progress_widget.py  rag_chew_progress_widget.py  resizable_field.py  senator_progress_widget.py  settings_editor.py  signals.py  space_weather_widget.py  spot_eligibility_analyzer.py  spot_matcher.py  theme_manager.py  tribune_progress_widget.py  triple_key_progress_widget.py  wac_progress_widget.py  was_progress_widget.py
src/ui/dialogs/: __init__.py  award_application_dialog.py  award_eligibility_dialog.py  award_report_dialog.py  export_dialog.py  import_dialog.py
src/ui/widgets/: rbn_spots_widget.py  skcc_spots_widget.py
src/utils/: cache.py  grid_calc.py  network.py  skcc_number.py  timezone_utils.py  validators.py
tests/: test_database_timeout.py  test_exception_handling.py  test_muf_predictions.py  test_spot_adapter.py  test_spot_matcher.py
